--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,11 +11,17 @@ body {
 	background-color: #FBFAF7;
 	margin: 0;
 	line-height: 1.8em;
-	-webkit-font-smoothing: antialiased;
+	// -webkit-font-smoothing: antialiased;
 
 }
 
 h1, h2, h3, h4, h5, h6 {
   color:#000000;
   margin:36px 0 10px;
+}
+
+a {
+  color:#0000C9;
+  font-weight:200;
+  text-decoration:none;
 }
