--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -29,7 +29,7 @@ time, mark, audio, video {
 body {
   padding:10px 50px 0 0;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-size: 18px;
 	color: #232323;
 	background-color: #FBFAF7;
 	margin: 0;
@@ -77,7 +77,7 @@ h4, h5, h6 {
 }
 
 a {
-  color:#C30000;
+  color:#0000C3;
   font-weight:200;
   text-decoration:none;
 }
