--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-            <li><a href="{{ '/' }}"> Home </a></li>
+            <li><a href="{{ '/SIA2019NoC/' }}"> Home </a></li>
+            <li><a href="{{ '/SIA2019NoC/homework.html' }}"> 과제 </a></li>
         </ul>
 
         <ul>
