--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -29,7 +29,7 @@ time, mark, audio, video {
 body {
   padding:10px 50px 0 0;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	color: #232323;
 	background-color: #FBFAF7;
 	margin: 0;
@@ -78,7 +78,7 @@ h4, h5, h6 {
 
 a {
   color:#0000C3;
-  font-weight:200;
+  // font-weight:200;
   text-decoration:none;
 }
 
@@ -273,18 +273,18 @@ header li {
 	padding: 6px 6px 6px 7px;
 
 	background: #AF0011;
-	background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
-  background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
-  background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
-  background: linear-gradient(to top, #AF0011 0%,#820011 100%);
+	// background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
+  // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
+  // background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
+  // background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
+  // background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
+  // background: linear-gradient(to top, #AF0011 0%,#820011 100%);
 
-	border-radius:4px;
-  border:1px solid #0D0D0D;
+	border-radius:2px;
+  // border:1px solid #0D0D0D;
 
-	-webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
-	box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
+	// -webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
+	// box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
 
 }
 
