--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -216,7 +216,7 @@ td {
 /* Header */
 
 header {
-	background-color: #171717;
+	background-color: #ED225D;
 	color: #FDFDFB;
   width:170px;
   float:left;
