--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
           {% endif %}
         </ul>
 
-        <a class="github" href="{{ site.github.repository_url }}">View On GitHub</a>
+        <a href="{{ site.github.repository_url }}">View On GitHub</a>
       </header>
 
       <section>
