--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -221,13 +221,13 @@ header {
   width:170px;
   float:left;
   position:fixed;
-	border: 1px solid #000;
-	-webkit-border-top-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
+	// border: 1px solid #000;
+	// -webkit-border-top-right-radius: 4px;
+	// -webkit-border-bottom-right-radius: 4px;
+	// -moz-border-radius-topright: 4px;
+	// -moz-border-radius-bottomright: 4px;
+	// border-top-right-radius: 4px;
+	// border-bottom-right-radius: 4px;
 	padding: 34px 25px 22px 50px;
 	margin: 30px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
