--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -222,12 +222,12 @@ header {
   float:left;
   position:fixed;
 	// border: 1px solid #000;
-	// -webkit-border-top-right-radius: 4px;
-	// -webkit-border-bottom-right-radius: 4px;
-	// -moz-border-radius-topright: 4px;
-	// -moz-border-radius-bottomright: 4px;
-	// border-top-right-radius: 4px;
-	// border-bottom-right-radius: 4px;
+	-webkit-border-top-right-radius: 2px;
+	-webkit-border-bottom-right-radius: 2px;
+	-moz-border-radius-topright: 2px;
+	-moz-border-radius-bottomright: 2px;
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
 	padding: 34px 25px 22px 50px;
 	margin: 30px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
