--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 
         <ul>
             <li><a href="{{ '/SIA2019NoC/' }}"> Home </a></li>
+            <li><a href="{{ '/SIA2019NoC/curriculum.html' }}"> 주차별 내용 </a></li>
             <li><a href="{{ '/SIA2019NoC/homework.html' }}"> 과제 </a></li>
         </ul>
 
