--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <header>
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
-
+        <p class="header">강의자 : 김승범</p>
         <ul>
             <li><a href="{{ '/SIA2019NoC/' }}"> Home </a></li>
             <li><a href="{{ '/SIA2019NoC/curriculum.html' }}"> 주차별 내용 </a></li>
