add lecture tip

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
             <li><a href="{{ '/SIA2019NoC/' }}"> Home </a></li>
             <li><a href="{{ '/SIA2019NoC/curriculum.html' }}"> 주차별 내용 </a></li>
             <li><a href="{{ '/SIA2019NoC/homework.html' }}"> 과제 </a></li>
+            <li><a href="{{ '/SIA2019NoC/lecture_tip.html' }}"> 수업의 팁 </a></li>
         </ul>
 
         <ul>
